src/App.css
.App {
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-align: center;
  background-color: black;
  color: #b7bfc4;
}

/* why don't these work? Trying to hide the browser window scroll bars even when at min widths*/
/* .body {
  scrollbar-width: none;
}
.body::-webkit-scrollbar {
  display: none;
} */
/* .body {
  overflow: hidden;
} */

.workspace {
  min-width: 500px;
  overflow-x: hidden;
}

.track-editor-controls {
  margin-top: 7px;
  margin-bottom: 8px;
}

.track-list {
  background-color: #15191b;
}

.scroll-content-wrapper {
  width: calc(100vw - 17px);
  float: left;
}

.content-panel {
  float: left;
  margin-right: 6px;
  width: 10%;
  max-width: 192px;
  height: 90%;
  max-height: 80vh;
}

.content-h {
  overflow-x: auto;
  overflow-y: hidden;
  scrollbar-width: none;
  background-color: #181d20; /* move to track-editor when you make it */
}

.content-h::-webkit-scrollbar {
  display: none;
}

.content-v {
  width: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
  text-align: left;
  scrollbar-width: none;
  max-height: 80vh;
}

/* .scroll-content-zoom-wrapper {
  width: 90%;
  float: left;
} */

.track-editor-wrapper .custom-scrollbar-v {
  margin-left: 90%;
}

.ruler {
  width: fit-content;
  height: 35px; /* Using this in TrackEditor component's vertical scrollbar. If you change this, change it there as well. */
  background-color: #0d1012;
}

.ruler-labels {
  white-space: nowrap;
  position: relative;
}

.ruler-label {
  font-size: 12px;
  font-weight: bold;
  text-align: left;
  position: absolute;
  top: -1px;
  margin-left: 4px;
  user-select: none;
}

.tracks-wrapper {
  width: 100%;
  border-bottom: 1px solid black;
  position: relative;
}

.tracks {
  position: absolute;
  top: 0px;
}

.track {
  border-bottom: 2px solid black;
  position: relative;
}

.track-note {
  display: inline-block;
  background-color: green;
  position: absolute;
}

.position-marker {
  position: absolute;
  width: 2px;
  border-left: 2px solid blue;
  z-index: 1;
}

.position-marker-head-container {
  position: absolute;
  top: -10px;
  left: -6px;
  width: 10px;
  height: 10px;
}

.position-marker-head {
  fill: blue;
}

.player-position-marker {
  position: absolute;
  width: 2px;
  border-left: 2px solid orange;
  z-index: 1;
}

.player-position-marker-head {
  fill: orange;
}

.play-button {
  margin-right: 5px;
}

.control-block {
  margin-left: 30px;
}

.plus-minus-button {
  width: 25px;
}

.scrollbar-h {
  /* use variable, do the same for V */
  margin-left: min(calc(10% + 6px), 198px);
  width: 100vw - min(calc(10% + 6px), 198px);
  height: 17px;
  position: relative;
  background-color: #f1f1f1;
  overflow-x: clip;
}

.scrollbar-v {
  margin-left: calc(100vw - 17px);
  position: relative;
  width: 17px;
  background-color: #f1f1f1;
  overflow-y: clip;
}

.scrollbar-h .scroll-thumb {
  position: absolute;
  top: 2px;
  height: 13px;
  background-color: #9d9d9d;
  transition-property: left;
  transition-timing-function: ease-in-out;
}

.scrollbar-v .scroll-thumb {
  position: absolute;
  left: 2px;
  width: 13px;
  background-color: #9d9d9d;
  transition-property: top;
  transition-timing-function: ease-in-out;
}

.scroll-thumb:hover {
  background-color: #c1c1c1;
}

.scroll-thumb:active {
  background-color: #787878;
}

